# python-project-52

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: admin.py  models.py  urls.py  views.py
task_manager/labels/tests/: test_forms.py  test_models.py  test_views.py  testcase.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/tests/: test_forms.py  test_models.py  test_views.py  testcase.py
task_manager/tasks/: admin.py  forms.py  urls.py
task_manager/tasks/tests/: test_forms.py  test_views.py
task_manager/templates/: base.html  footer.html  form.html  index.html  navbar.html
task_manager/templates/components/: form_field.html
task_manager/templates/includes/: base_form.html  form_field.html  navbar.html
task_manager/templates/users/: index.html  registration_form.html
task_manager/users/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/users/tests/: test_forms.py  test_views.py  testcase.py
