[project]
authors = [
    {name = "Alina Makarovskaya", email = "makarovskaya1307@gmail.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "Project #4 - Task Manager"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.2",
    "django-bootstrap5>=25.1",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.5",
    "whitenoise>=6.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]
